--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "office-ui-fabric-react": "^7.0.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.1.2"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "just-stack-react": "^1.0.0",
