feat: initial excel card import structure
Co-authored-by: Samuel Plumppu <greenheartmusic@gmail.com>

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gen": "npx plop"
   },
   "dependencies": {
+    "exceljs": "^3.8.2",
     "office-ui-fabric-react": "^7.105.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
