--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gen": "npx plop"
   },
   "dependencies": {
-    "office-ui-fabric-react": "^7.105.1",
+    "@fluentui/react": "^7.147.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
