--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "card-creator-single",
   "version": "0.1.0",
   "license": "MIT",
-  "main": "lib-commonjs/index.js",
-  "module": "lib/index.js",
   "scripts": {
-    "build": "just-scripts build",
-    "just": "just-scripts",
-    "start": "just-scripts start",
-    "test": "just-scripts test",
-    "change": "npx beachball change",
-    "gen": "npx plop"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "serve ./dist",
+    "build": "webpack --env.production",
+    "start": "webpack"
   },
   "dependencies": {
-    "@fluentui/react": "^7.147.1",
+    "@fluentui/react": "^8.66.2",
+    "@uifabric/utilities": "^7.34.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -21,7 +18,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "just-scripts": "^1.2.0",
-    "just-stack-react": "^1.0.0"
+    "copy-webpack-plugin": "^10.2.4",
+    "serve": "^13.0.2",
+    "source-map-loader": "^3.0.1",
+    "ts-loader": "^9.2.8",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   }
 }
